--- a/CSS/Register.css
+++ b/CSS/Register.css
@@ -64,7 +64,7 @@ body{
 
 .Register_Forum::before{
     content: "";
-    background-image: url(../Images/Food_Register4.jpg);
+    background-image: url(/Images/Food_Register4.jpg);
     background-size: 100%;
     position: absolute;
     top: 0px;
